quick hack to fix options panels in node/add pages not collapsing

--- a/src/css/dgu-drupal.less
+++ b/src/css/dgu-drupal.less
@@ -979,3 +979,9 @@ div.fivestar-widget-static .star span.off {
     }
   }
 }
+
+
+/* Hack to fix the Add content issue with option panels */
+.page-node-add .collapse {
+  display: block;
+}
